--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "normalize-ws-url-protocol",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Use ws:// or wss:// depending on environment.",
   "main": "./app/dist/esm/normalizeWsUrlProtocol.mjs",
   "types": "./app/dist/esm/normalizeWsUrlProtocol.d.ts",
@@ -27,12 +27,12 @@
     "url": "git+https://github.com/maximilianMairinger/normalizeWsUrlProtocol.git"
   },
   "keywords": [
-  "normalize",
-  "ws",
-  "websocket",
-  "url",
-  "protocol"
-],
+    "normalize",
+    "ws",
+    "websocket",
+    "url",
+    "protocol"
+  ],
   "author": "maximilianMairinger",
   "license": "ISC",
   "bugs": {
@@ -55,7 +55,5 @@
     "typescript": "^4.0.2",
     "webpack-merge": "^5.0.9"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
